# rust-api-auto-update

./: Cargo.toml  README.md
src/: check_for_update.rs  main.rs
src/check_for_update/: build_new_version.rs  clone_project.rs  delete_temp_files.rs  download_and_verify_update.rs  fetch_toml_from_github.rs  move_to_right_path.rs  replace_old_version.rs  restart_application.rs  restart_process.rs
