[package]
name = "rust-api-auto-update"
version = "1.0.0"
edition = "2021"
authors = ["Deji Abodunrin <dejitzen@gmail.com>"]
license = "MIT"
description = "Rust Auto-Updater Library"
readme = "README.md"
repository = "https://github.com/dejitzen/rust-api-auto-update"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
clokwerk = "0.4.0"
reqwest = "0.11.24"
tokio = { version = "1.x", features = ["full"] }
toml = "0.8.10"
version-compare = "0.1.1"
