[package]
name = "rust-api-auto-update"
version = "1.0.0"
edition = "2021"
authors = ["Deji Abodunrin <dejitzen@gmail.com>"]
license = "MIT"
description = "Rust Auto-Updater Library"
readme = "README.md"
repository = "https://github.com/dejitzen/rust-api-auto-update"
exclude = [
    ".cargo_vcs_info.json",
    ".vscode/settings.json",
    ".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
clokwerk = "0.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.x", features = ["full"] }
toml = "0.8.10"
version-compare = "0.1.1"
tempfile = "3.10.0"
sha2 = "0.10.8"
tempdir = "0.3.7"
